force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>