force-app/main/default/objects/IntegrationLog__c/fields/Callout__c.field-meta.xml
<CustomField>
    <fullName>Callout__c</fullName>
    <label>Callout</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Address Verification</fullName>
            </value>
            <value>
                <fullName>Age Verification</fullName>
            </value>
            <value>
                <fullName>CCN Lookup</fullName>
            </value>
            <value>
                <fullName>Full Search Lookup</fullName>
            </value>
            <value>
                <fullName>Profile Update</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>Zip Lookup</fullName>
            </value>
            <value>
                <fullName>CEA Complaint</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Core Services</fullName>
            </value>
            <value>
                <fullName>Device ot Kit - Core Services</fullName>
            </value>
            <value>
                <fullName>IVR Reimbursements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>