force-app/main/default/objects/IntegrationLog__c/fields/Consumer_Trade_Customer__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Trade_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer/Trade Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>