force-app/main/default/objects/IntegrationLog__c/fields/CustomerCCN__c.field-meta.xml
<CustomField>
    <fullName>CustomerCCN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>CustomerCCN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>