force-app/main/default/objects/IntegrationLog__c/fields/FormName__c.field-meta.xml
<CustomField>
    <fullName>FormName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FormName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>