force-app/main/default/objects/IntegrationLog__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>