force-app/main/default/objects/IntegrationLog__c/fields/Transaction_Management__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Management</label>
    <referenceTo>Transaction_Management__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>