force-app/main/default/objects/IntegrationLog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acxiom</fullName>
            </value>
            <value>
                <fullName>Lexis-Nexis</fullName>
            </value>
            <value>
                <fullName>Melissa</fullName>
            </value>
            <value>
                <fullName>Alorica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>