force-app/main/default/objects/IntegrationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Success__c</columns>
    <columns>Type__c</columns>
    <columns>Callout__c</columns>
    <columns>Transaction_Management__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2025 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>