force-app/main/default/objects/IntegrationLog__c/listViews/Amy.listView-meta.xml
<ListView>
    <fullName>Amy</fullName>
    <columns>NAME</columns>
    <columns>Success__c</columns>
    <columns>Callout__c</columns>
    <columns>Transaction_Management__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Callout__c</field>
        <operation>equals</operation>
        <value>CEA Complaint</value>
    </filters>
    <label>Amy</label>
</ListView>