force-app/main/default/objects/IntegrationLog__c/listViews/Check_Issue.listView-meta.xml
<ListView>
    <fullName>Check_Issue</fullName>
    <columns>NAME</columns>
    <columns>Callout__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Success__c</columns>
    <columns>Transaction_Management__c</columns>
    <columns>Type__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>greaterThan</operation>
        <value>7/21/2022</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>contains</operation>
        <value>API</value>
    </filters>
    <label>CEA Complaints</label>
</ListView>